fixed wrapping on some displays

--- a/Styles/general.css
+++ b/Styles/general.css
@@ -12,7 +12,7 @@
 .content-wrapper {
     /* flex:1; */
     width: 640px;
-    /* border: 1px solid white; */
+    border: 1px solid white;
 }
 
 .button {
@@ -48,6 +48,7 @@
 
 .text {
     color: white;
+    white-space: nowrap;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
